<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot_simulator</name>
  <version>1.0.1</version>
  <description>The mobile_robot_simulator package</description>

  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>

  <license>BSD</license>

  <author email="mrp@rvmi.aau.dk">Mikkel Rath Pedersen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
